<resources>

    <string name="app_name">videoNpixandBarcode</string>
    <string name="menu_settings">Settings</string>
    <string name="loading">Loading…</string>
    <string name="sdcard_not_found">Sdcard not found! Please insert sdcard!</string>
    <string name="brightness">Brightness</string>
    <string name="volume">Volume</string>
    <string name="login_title">videoNpix&#160;&#160;&#160;Settings</string>
    <string name="pixnum">Pix Num:&#160;&#160;&#160;</string>
    <string name="pixnum_2">2 pix&#160;&#160;&#160;</string>
    <string name="pixnum_4">4 pix&#160;&#160;&#160;</string>
    <string name="pixnum_6">6 pix</string>
    <string name="playorder">Play Order:&#160;&#160;&#160;&#160;</string>
    <string name="order_random">Random&#160;&#160;</string>
    <string name="order_sequential">Sequential</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="Product">Product Name:</string>
    <string name="Barcode">Barcode:</string>
    <string name="Details">Details:</string>
    <string name="NONO">No such information</string>
	<string name="three">3s</string>
    <string name="five">10s</string>
    <string name="thirty">30s</string>
    <string name="sixty">60s</string>
    <string name="waiting">WaitTime:</string>
	<string name="selfstart">Self Start:</string>
	<string name="yes">Yes</string>
	<string name="no">No</string>
</resources>
