<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000"
	android:gravity="center_horizontal"
	android:layout_gravity="center"
    android:orientation="vertical" >
    
    <LinearLayout
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
		android:gravity="center_horizontal"
		android:layout_marginTop="100dp" >
		    
	    <TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/login_title"
			android:textColor="#fff"
			android:textSize="15pt" />
	</LinearLayout>
	
    
    <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
	    xmlns:tools="http://schemas.android.com/tools"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:background="#000"  >
	
	    <TableRow
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	       	android:gravity="center"
	        android:layout_marginTop="50dp" >
	
	        <TextView
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/pixnum"
	            android:textColor="#fff"
	            android:textSize="15pt"
	       		android:layout_marginLeft="20dp" />
	
	        <RadioGroup
	            android:layout_gravity="center_horizontal"
	            android:orientation="horizontal" >
	
	            <RadioButton
	                android:id="@+id/radioButton1"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:text="@string/pixnum_2"
	            	android:textSize="15pt" />
	
	            <RadioButton
	                android:id="@+id/radioButton2"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:text="@string/pixnum_4"
	            	android:textSize="15pt" />
	            
	            <RadioButton
	                android:id="@+id/radioButton3"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:text="@string/pixnum_6"
	            	android:textSize="15pt" />
	        </RadioGroup>
	        
	    </TableRow>
	
	    <TableRow
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:gravity="center"
	        android:layout_marginTop="15dp" >
	
	        <TextView
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/playorder"
	            android:textColor="#fff"
	            android:textSize="15pt"
	       		android:layout_marginLeft="20dp" />
	
	        <RadioGroup
	            android:layout_gravity="center_horizontal"
	            android:orientation="horizontal" >
	            
	            <RadioButton
	                android:id="@+id/radioButton4"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:text="@string/order_random"
	            	android:textSize="15pt" />
	
	            <RadioButton
	                android:id="@+id/radioButton5"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:text="@string/order_sequential"
	            	android:textSize="15pt" />
	            
	        </RadioGroup>
	        
	    </TableRow>
	
	</TableLayout>
	
	<LinearLayout
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
		android:gravity="center_horizontal"
		android:layout_marginTop="50dp"
	    android:orientation="horizontal" >
		    
		<Button
			android:id="@+id/button1"
			android:layout_width="130dp"
			android:layout_height="50dp"
			android:gravity="center"
			android:text="@string/cancel"
			android:textSize="10pt" />
		
		<Button
			android:id="@+id/button2"
			android:layout_width="130dp"
			android:layout_height="50dp"
			android:gravity="center"
			android:layout_marginLeft="50dp"
			android:text="@string/ok"
			android:textSize="10pt" />
	</LinearLayout>
	
</LinearLayout>
  